# site_parser

./: ._parser.py  .gitignore  README.md  company.py  compare_results.py  main.py  parser-u.py  parser.py  parser2.py  parser4.py  parser5.py  parser6.py  parser7.py  pyproject.toml  requirements.txt  results_20250422_223323.json  results_20250422_224847.json  test.py  websiteFinder.py
